--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-29 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Started to implement in-band "CMD" message parsing.
+
+	* s/tuning/advanced/g
+
 2010-08-28 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added programstart.ogg by Philippe Michael Groarke.
