--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -1,3 +1,88 @@
+@deftypefun {char *} {lw6msg_cmd_generate_hello} (lw6nod_info_t * @var{info}, lw6msg_cmd_mode_t @var{mode})
+@var{info}:  the nod info to use
+
+@var{mode}:  the mode to use (standard or URL compatible)
+
+Generate a HELLO command.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
+@deftypefun {char *} {lw6msg_cmd_generate_ticket} (lw6nod_info_t * @var{info}, lw6msg_cmd_mode_t @var{mode}, u_int32_t @var{ticket})
+@var{info}:  the nod info to use
+
+@var{mode}:  the mode to use (standard or URL compatible)
+
+Generate a TICKET command.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
+@deftypefun {char *} {lw6msg_cmd_generate_foo} (lw6msg_cmd_mode_t @var{mode}, int @var{key})
+@var{mode}:  the mode to use (standard or URL compatible)
+
+Generate a FOO command.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
+@deftypefun {char *} {lw6msg_cmd_generate_bar} (lw6msg_cmd_mode_t @var{mode}, int @var{key})
+@var{mode}:  the mode to use (standard or URL compatible)
+
+Generate a BAR command.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
+@deftypefun {char *} {lw6msg_cmd_generate_goodbye} (lw6msg_cmd_mode_t @var{mode})
+@var{mode}:  the mode to use (standard or URL compatible)
+
+Generate a GOODBYE command.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
+@deftypefun {int} {lw6cmd_analyse_hello} (lw6nod_info_t ** @var{info})
+@var{info}:  if not NULL, will contain (remote) node info on success
+
+Analyzes a HELLO message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6cmd_analyse_ticket} (lw6nod_info_t ** @var{info}, u_int32_t * @var{ticket})
+@var{info}:  if not NULL, will contain (remote) node info on success
+
+@var{ticket}:  if not NULL, will contain the ticket value on success
+
+Analyzes a TICKET message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6cmd_analyse_foo} (int * @var{key})
+@var{key}:  if not NULL, will contain the foo/bar key on success
+
+Analyzes a FOO message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6cmd_analyse_bar} (int * @var{key})
+@var{key}:  if not NULL, will contain the foo/bar key on success
+
+Analyzes a BAR message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6cmd_analyse_goodbye} ()
+
+Analyzes a GOODBYE message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
 @deftypefun {char *} {lw6msg_oob_generate_info} (lw6nod_info_t * @var{info})
 @var{info}:  the node to generate info about
 
