--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -42,41 +42,50 @@ Generate a GOODBYE command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {int} {lw6cmd_analyse_hello} (lw6nod_info_t ** @var{info})
+@deftypefun {int} {lw6cmd_analyse_hello} (lw6nod_info_t ** @var{info}, char * @var{msg})
 @var{info}:  if not NULL, will contain (remote) node info on success
+
+@var{msg}:  the message to anaylse
 
 Analyzes a HELLO message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6cmd_analyse_ticket} (lw6nod_info_t ** @var{info}, u_int32_t * @var{ticket})
+@deftypefun {int} {lw6cmd_analyse_ticket} (lw6nod_info_t ** @var{info}, u_int32_t * @var{ticket}, char * @var{msg})
 @var{info}:  if not NULL, will contain (remote) node info on success
 
 @var{ticket}:  if not NULL, will contain the ticket value on success
+
+@var{msg}:  the message to anaylse
 
 Analyzes a TICKET message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6cmd_analyse_foo} (int * @var{key})
+@deftypefun {int} {lw6cmd_analyse_foo} (int * @var{key}, char * @var{msg})
 @var{key}:  if not NULL, will contain the foo/bar key on success
+
+@var{msg}:  the message to anaylse
 
 Analyzes a FOO message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6cmd_analyse_bar} (int * @var{key})
+@deftypefun {int} {lw6cmd_analyse_bar} (int * @var{key}, char * @var{msg})
 @var{key}:  if not NULL, will contain the foo/bar key on success
+
+@var{msg}:  the message to anaylse
 
 Analyzes a BAR message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6cmd_analyse_goodbye} ()
+@deftypefun {int} {lw6cmd_analyse_goodbye} (char * @var{msg})
+@var{msg}:  the message to anaylse
 
 Analyzes a GOODBYE message.
 
