--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-30 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added /etc/init.d startup file for daemon.
+
 2010-08-29 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Started to implement in-band "CMD" message parsing.
