--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -3824,6 +3824,25 @@ Truncates a string to the max given length. If truncated to 3,
 @strong{Return value:}  none, @code{str} pointed data modified in-place
 @end deftypefun
 
+@deftypefun {char *} {lw6sys_str_random} (int @var{len})
+@var{len}:  the length of the random string to generate.
+
+Generates a random string, this is usefull for testing.
+
+@strong{Return value:}  newly allocated string
+@end deftypefun
+
+@deftypefun {int} {lw6sys_str_is_bin} (char * @var{buf}, int @var{len})
+@var{buf}:  the buffer to test
+
+@var{len}:  the length of the buffer
+
+Tests wether a buffer is likely to contain a string. This is not
+a bulletproof function, just a simple heuristic based estimator.
+
+@strong{Return value:}  1 if probably binary, 0 if probably text
+@end deftypefun
+
 @deftypefun {char *} {lw6sys_stream_file_to_str} (FILE * @var{f})
 @var{f}:  file to get input from, typically stdin
 
