Foo message sent on a regular basis.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-04 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Foo message sent on a regular basis.
+
 2010-09-03 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added net logging facility.
