--- a/liquidwar6/doc/cnx-gdoc.texi
+++ b/liquidwar6/doc/cnx-gdoc.texi
@@ -36,6 +36,28 @@ the caller/backend to handle the @code{backend_specific_data} field.
 @strong{Return value:}  none.
 @end deftypefun
 
+@deftypefun {int} {lw6cnx_connection_should_send_foo} (lw6cnx_connection_t * @var{connection}, int64_t @var{now})
+@var{connection}:  the connection concerned
+
+@var{now}:  the current timestamp
+
+Tells wether a new foo message must be issued.
+
+@strong{Return value:}  1 if true, 0 if false.
+@end deftypefun
+
+@deftypefun {void} {lw6cnx_connection_init_foo_bar_key} (lw6cnx_connection_t * @var{connection}, int64_t @var{now}, int @var{next_foo_delay})
+@var{connection}:  the connection concerned
+
+@var{now}:  the current timestamp
+
+@var{next_foo_delay}:  the delay (msec) before next foo message is sent
+
+Generates a new foo_bar_key, and schedules the next foo message send timestamp.
+
+@strong{Return value:}  none.
+@end deftypefun
+
 @deftypefun {int} {lw6cnx_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
