--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-09-04 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added envelope parsing.
+
 	* Foo message sent on a regular basis.
 
 2010-09-03 : Christian Mauduit <ufoot@ufoot.org>
