--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -108,6 +108,64 @@ Analyzes a GOODBYE message.
 @strong{Return value:}  the from url, if found (dynamically allocated)
 @end deftypefun
 
+@deftypefun {char *} {lw6msg_envelope_generate} (lw6msg_envelope_mode_t @var{mode}, char * @var{version}, char * @var{password_checksum}, u_int32_t @var{ticket_sig}, char * @var{physical_from_id}, char * @var{physical_to_id}, char * @var{logical_from_id}, char * @var{logical_to_id}, char * @var{msg})
+@var{mode}:  mode to use (a la TELNET or URL compatible)
+
+@var{version}:  the program version to use (note: can be changed when testing)
+
+@var{password_checksum}:  the password string to send
+
+@var{ticket_sig}:  the signature of the message, calculated with ticket
+
+@var{physical_from_id}:  the sender id
+
+@var{physical_to_id}:  the receiver id
+
+@var{logical_from_id}:  the message creator id
+
+@var{logical_to_id}:  the message final destination id
+
+@var{msg}:  the body of the message
+
+Generate an envelope, that is, the complete message sendable on the
+network.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_envelope_analyse} (char * @var{envelope}, lw6msg_envelope_mode_t @var{mode}, char * @var{local_url}, char * @var{password}, char * @var{expected_physical_from_id}, char * @var{expected_physical_to_id}, char ** @var{msg}, u_int32_t * @var{ticket_sig}, u_int64_t * @var{physical_from_id}, u_int64_t * @var{physical_to_id}, u_int64_t * @var{logical_from_id}, u_int64_t * @var{logical_to_id}, char ** @var{physical_from_url})
+@var{envelope}:  the envelope to analyse
+
+@var{mode}:  mode to use (a la TELNET or URL compatible)
+
+@var{local_url}:  the url of local server (usefull for password)
+
+@var{password}:  the password to check against
+
+@var{expected_physical_from_id}:  the sender id, if NULL, no check performed
+
+@var{expected_physical_to_id}:  the receiver id, if NULL, no check performed
+
+@var{msg}:  if not NULL, will contain body of the message
+
+@var{ticket_sig}:  if not NULL, will contain signature of message, calculated with ticket
+
+@var{physical_from_id}:  if not NULL, will contain sender id
+
+@var{physical_to_id}:  if not NULL, will contain receiver id
+
+@var{logical_from_id}:  if not NULL, will contain message creator id
+
+@var{logical_to_id}:  if not NULL, will contain message final destination id
+
+@var{physical_from_url}:  if not NULL and if message allows, will contain sender public URL
+
+Generate an envelope, that is, the complete message sendable on the
+network.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
 @deftypefun {char *} {lw6msg_oob_generate_info} (lw6nod_info_t * @var{info})
 @var{info}:  the node to generate info about
 
@@ -257,6 +315,23 @@ is over. This one will returned an int converted with @code{lw6sys_atoi}.
 Analyses a message and gets the first word. This word is put in @code{buf} member
 with its length. @code{next} is usefull if you want to parse the rest of the message,
 it points at the beginning of it.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_word_first_x} (lw6msg_word_t * @var{word}, char ** @var{next}, char * @var{msg})
+@var{word}:  will contain the parsed word
+
+@var{next}:  if NOT NULL, will contain a (non freeable) pointer on remaining message
+
+@var{msg}:  the message to parse
+
+Analyses a message and gets the first word. This word is put in @code{buf} member
+with its length. @code{next} is usefull if you want to parse the rest of the message,
+it points at the beginning of it. This special @code{x} function will consider slash
+("/") as valid separator. It can't be used all the time but for almost every
+field but URLs, it's fine. Internally, this one is used to parse integers,
+IDs, etc.
 
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
